--- a/supabase/seed.sql.template
+++ b/supabase/seed.sql.template
@@ -1,32 +1,69 @@
 -- Seed data for FastDesk platform
 
+-- Insert API integrations
+INSERT INTO api_integrations (id, name, api_key, status, permissions, rate_limit) VALUES
+    ('a1b2c3d4-e5f6-4a5b-8c9d-1a2b3c4d5e6f', 'Zendesk Integration', 'zd_test_key_123', 'active', '{"tickets": {"read": true, "write": true}}', 1000),
+    ('b2c3d4e5-f6a7-5b6c-9d0e-2b3c4d5e6f7a', 'Jira Integration', 'jira_test_key_456', 'active', '{"tickets": {"read": true, "write": false}}', 500);
+
+-- Insert Customer Organizations
+INSERT INTO customer_organizations (id, name, domain, status) VALUES
+    ('c3d4e5f6-a7b8-6c7d-0e1f-3b4c5d6e7f8b', 'TechCorp Inc', 'techcorp.com', 'active'),
+    ('d4e5f6a7-b8c9-7d8e-1f2a-4b5c6d7e8f9c', 'DevInc Solutions', 'devinc.io', 'active');
+
 -- Insert Teams
 INSERT INTO teams (id, name, description) VALUES
     ('d7a2c49c-f34d-4c5b-8d54-d123f229a86d', 'Technical Support', 'Primary technical support team'),
-    ('f9b2c49c-f34d-4c5b-8d54-d123f229a86e', 'Customer Success', 'Customer success and account management'),
     ('e8b2c49c-f34d-4c5b-8d54-d123f229a86f', 'Billing Support', 'Billing and payment support');
 
-
 -- Insert/Update profiles for the users
-INSERT INTO profiles (id, full_name, role) VALUES
-    ('USER_ID_1', 'USER_FULL_NAME_1', 'USER_ROLE_1'),
-    ('USER_ID_2', 'USER_FULL_NAME_2', 'USER_ROLE_2'),
-    ('USER_ID_3', 'USER_FULL_NAME_3', 'USER_ROLE_3')
+INSERT INTO profiles (id, full_name, role, status) VALUES
+    ('USER_ID_1', 'USER_FULL_NAME_1', 'USER_ROLE_1', 'offline'),
+    ('USER_ID_2', 'USER_FULL_NAME_2', 'USER_ROLE_2', 'offline'),
+    ('USER_ID_3', 'USER_FULL_NAME_3', 'USER_ROLE_3', 'offline')
 ON CONFLICT (id) DO UPDATE 
 SET full_name = EXCLUDED.full_name,
-    role = EXCLUDED.role;
+    role = EXCLUDED.role,
+    status = EXCLUDED.status;
 
 -- Insert team members
 INSERT INTO team_members (team_id, profile_id, role_in_team) VALUES
-    ('d7a2c49c-f34d-4c5b-8d54-d123f229a86d', 'a1b2c49c-f34d-4c5b-8d54-d123f229a123', 'lead'),
-    ('f9b2c49c-f34d-4c5b-8d54-d123f229a86e', 'b2c3d49c-f34d-4c5b-8d54-d123f229a456', 'member'),
-    ('e8b2c49c-f34d-4c5b-8d54-d123f229a86f', 'c3d4e49c-f34d-4c5b-8d54-d123f229a789', 'member');
+    ('d7a2c49c-f34d-4c5b-8d54-d123f229a86d', 'USER_ID_1', 'lead'),
+    ('d7a2c49c-f34d-4c5b-8d54-d123f229a86d', 'USER_ID_2', 'member'),
+    ('e8b2c49c-f34d-4c5b-8d54-d123f229a86f', 'USER_ID_3', 'member');
 
--- Insert customers
-INSERT INTO customers (id, email, full_name, company, metadata) VALUES
-    ('d4e5f49c-f34d-4c5b-8d54-d123f229abcd', 'alice@example.com', 'Alice Johnson', 'TechCorp', '{"plan": "enterprise", "region": "US-West"}'),
-    ('e5f6a49c-f34d-4c5b-8d54-d123f229bcde', 'bob@example.com', 'Bob Brown', 'DevInc', '{"plan": "pro", "region": "US-East"}'),
-    ('f6a7b49c-f34d-4c5b-8d54-d123f229cdef', 'carol@example.com', 'Carol White', 'WebSoft', '{"plan": "starter", "region": "EU"}');
+-- Insert customers with organization relationships
+INSERT INTO customers (id, email, full_name, company, organization_id, type, external_id, metadata, external_metadata) VALUES
+    ('d4e5f49c-f34d-4c5b-8d54-d123f229abcd', 'alice@techcorp.com', 'Alice Johnson', 'TechCorp', 'c3d4e5f6-a7b8-6c7d-0e1f-3b4c5d6e7f8b', 'business', 'TC001', 
+    '{"plan": "enterprise", "region": "US-West"}',
+    '{"zendesk_id": "zd_123", "jira_id": "j_456"}'),
+    ('e5f6a49c-f34d-4c5b-8d54-d123f229bcde', 'bob@devinc.io', 'Bob Brown', 'DevInc', 'd4e5f6a7-b8c9-7d8e-1f2a-4b5c6d7e8f9c', 'business', 'DI001',
+    '{"plan": "pro", "region": "US-East"}',
+    '{"zendesk_id": "zd_789"}'),
+    ('f6a7b49c-f34d-4c5b-8d54-d123f229cdef', 'carol@personal.com', 'Carol White', null, null, 'individual', null,
+    '{"plan": "starter", "region": "EU"}',
+    null);
+
+-- Insert customer organization members
+INSERT INTO customer_organization_members (organization_id, customer_id, role) VALUES
+    ('c3d4e5f6-a7b8-6c7d-0e1f-3b4c5d6e7f8b', 'd4e5f49c-f34d-4c5b-8d54-d123f229abcd', 'admin'),
+    ('d4e5f6a7-b8c9-7d8e-1f2a-4b5c6d7e8f9c', 'e5f6a49c-f34d-4c5b-8d54-d123f229bcde', 'admin');
+
+-- Insert customer channels
+INSERT INTO customer_channels (id, customer_id, channel_type, identifier, verified, is_primary) VALUES
+    ('aabbcc49-f34d-4c5b-8d54-111222333444', 'd4e5f49c-f34d-4c5b-8d54-d123f229abcd', 'email', 'alice@techcorp.com', true, true),
+    ('bbccdd49-f34d-4c5b-8d54-222333444555', 'd4e5f49c-f34d-4c5b-8d54-d123f229abcd', 'whatsapp', '+1234567890', true, false),
+    ('ccddee49-f34d-4c5b-8d54-333444555666', 'e5f6a49c-f34d-4c5b-8d54-d123f229bcde', 'email', 'bob@devinc.io', true, true),
+    ('ddeeff49-f34d-4c5b-8d54-444555666777', 'f6a7b49c-f34d-4c5b-8d54-d123f229cdef', 'email', 'carol@personal.com', true, true);
+
+-- Insert customer channel preferences
+INSERT INTO customer_channel_preferences (customer_id, channel_id, notification_enabled, quiet_hours_start, quiet_hours_end) VALUES
+    ('d4e5f49c-f34d-4c5b-8d54-d123f229abcd', 'aabbcc49-f34d-4c5b-8d54-111222333444', true, '22:00', '07:00'),
+    ('d4e5f49c-f34d-4c5b-8d54-d123f229abcd', 'bbccdd49-f34d-4c5b-8d54-222333444555', true, '23:00', '08:00');
+
+-- Insert customer permissions
+INSERT INTO customer_permissions (customer_id, resource_type, resource_id, permission) VALUES
+    ('d4e5f49c-f34d-4c5b-8d54-d123f229abcd', 'ticket', null, 'admin'),
+    ('e5f6a49c-f34d-4c5b-8d54-d123f229bcde', 'ticket', null, 'edit');
 
 -- Insert tags
 INSERT INTO tags (id, name, color, description) VALUES
@@ -36,26 +73,26 @@ INSERT INTO tags (id, name, color, description) VALUES
 
 -- Insert templates
 INSERT INTO templates (id, title, content, team_id, created_by) VALUES
-    ('d4d5c49c-f34d-4c5b-8d54-d123f229d444', 'Welcome Response', 'Thank you for contacting FastDesk support. I''ll be happy to help you today.', 'd7a2c49c-f34d-4c5b-8d54-d123f229a86d', 'a1b2c49c-f34d-4c5b-8d54-d123f229a123'),
-    ('e5e6c49c-f34d-4c5b-8d54-d123f229e555', 'Billing FAQ', 'Here are our most common billing questions and answers...', 'e8b2c49c-f34d-4c5b-8d54-d123f229a86f', 'c3d4e49c-f34d-4c5b-8d54-d123f229a789');
+    ('d4d5c49c-f34d-4c5b-8d54-d123f229d444', 'Welcome Response', 'Thank you for contacting FastDesk support. I''ll be happy to help you today.', 'd7a2c49c-f34d-4c5b-8d54-d123f229a86d', 'USER_ID_1'),
+    ('e5e6c49c-f34d-4c5b-8d54-d123f229e555', 'Billing FAQ', 'Here are our most common billing questions and answers...', 'e8b2c49c-f34d-4c5b-8d54-d123f229a86f', 'USER_ID_3');
 
--- Insert tickets
-INSERT INTO tickets (id, title, customer_id, team_id, status, priority) VALUES
-    ('f6f7c49c-f34d-4c5b-8d54-d123f229f666', 'Cannot access dashboard', 'd4e5f49c-f34d-4c5b-8d54-d123f229abcd', 'd7a2c49c-f34d-4c5b-8d54-d123f229a86d', 'open', 'high'),
-    ('a7a8c49c-f34d-4c5b-8d54-d123f229a777', 'Billing cycle question', 'e5f6a49c-f34d-4c5b-8d54-d123f229bcde', 'e8b2c49c-f34d-4c5b-8d54-d123f229a86f', 'new', 'medium'),
-    ('b8b9c49c-f34d-4c5b-8d54-d123f229b888', 'Feature suggestion', 'f6a7b49c-f34d-4c5b-8d54-d123f229cdef', 'f9b2c49c-f34d-4c5b-8d54-d123f229a86e', 'pending', 'low');
+-- Insert tickets with source and integration data
+INSERT INTO tickets (id, title, customer_id, team_id, status, priority, source, created_by_type, created_by_id, integration_id, external_reference_id) VALUES
+    ('f6f7c49c-f34d-4c5b-8d54-d123f229f666', 'Cannot access dashboard', 'd4e5f49c-f34d-4c5b-8d54-d123f229abcd', 'd7a2c49c-f34d-4c5b-8d54-d123f229a86d', 'open', 'high', 'customer_portal', 'customer', 'd4e5f49c-f34d-4c5b-8d54-d123f229abcd', null, null),
+    ('a7a8c49c-f34d-4c5b-8d54-d123f229a777', 'Billing cycle question', 'e5f6a49c-f34d-4c5b-8d54-d123f229bcde', 'e8b2c49c-f34d-4c5b-8d54-d123f229a86f', 'new', 'medium', 'email', 'customer', 'e5f6a49c-f34d-4c5b-8d54-d123f229bcde', null, null),
+    ('b8b9c49c-f34d-4c5b-8d54-d123f229b888', 'Feature suggestion', 'f6a7b49c-f34d-4c5b-8d54-d123f229cdef', 'd7a2c49c-f34d-4c5b-8d54-d123f229a86d', 'pending', 'low', 'api', 'api', null, 'a1b2c3d4-e5f6-4a5b-8c9d-1a2b3c4d5e6f', 'ZD-12345');
 
 -- Insert ticket assignments
 INSERT INTO ticket_assignments (ticket_id, agent_id, team_id, is_primary) VALUES
-    ('f6f7c49c-f34d-4c5b-8d54-d123f229f666', 'a1b2c49c-f34d-4c5b-8d54-d123f229a123', 'd7a2c49c-f34d-4c5b-8d54-d123f229a86d', true),
-    ('a7a8c49c-f34d-4c5b-8d54-d123f229a777', 'c3d4e49c-f34d-4c5b-8d54-d123f229a789', 'e8b2c49c-f34d-4c5b-8d54-d123f229a86f', true),
-    ('b8b9c49c-f34d-4c5b-8d54-d123f229b888', 'b2c3d49c-f34d-4c5b-8d54-d123f229a456', 'f9b2c49c-f34d-4c5b-8d54-d123f229a86e', true);
+    ('f6f7c49c-f34d-4c5b-8d54-d123f229f666', 'USER_ID_1', 'd7a2c49c-f34d-4c5b-8d54-d123f229a86d', true),
+    ('a7a8c49c-f34d-4c5b-8d54-d123f229a777', 'USER_ID_3', 'e8b2c49c-f34d-4c5b-8d54-d123f229a86f', true),
+    ('b8b9c49c-f34d-4c5b-8d54-d123f229b888', 'USER_ID_2', 'd7a2c49c-f34d-4c5b-8d54-d123f229a86d', true);
 
--- Insert ticket messages
-INSERT INTO ticket_messages (id, ticket_id, sender_type, customer_sender_id, agent_sender_id, content, is_internal, thread_id, thread_position) VALUES
-    ('aabbcc49-f34d-4c5b-8d54-d123f229f111', 'f6f7c49c-f34d-4c5b-8d54-d123f229f666', 'customer', 'd4e5f49c-f34d-4c5b-8d54-d123f229abcd', null, 'I keep getting a 403 error when trying to access the dashboard. Can you help?', false, 'aabbcc49-f34d-4c5b-8d54-d123f229f111', 0),
-    ('aabbcc49-f34d-4c5b-8d54-d123f229f222', 'f6f7c49c-f34d-4c5b-8d54-d123f229f666', 'agent', null, 'a1b2c49c-f34d-4c5b-8d54-d123f229a123', 'I''ll look into this right away. Can you confirm when this started happening?', false, 'aabbcc49-f34d-4c5b-8d54-d123f229f111', 1),
-    ('aabbcc49-f34d-4c5b-8d54-d123f229f333', 'a7a8c49c-f34d-4c5b-8d54-d123f229a777', 'customer', 'e5f6a49c-f34d-4c5b-8d54-d123f229bcde', null, 'When exactly does the billing cycle start?', false, 'aabbcc49-f34d-4c5b-8d54-d123f229f333', 0);
+-- Insert ticket messages with channel information
+INSERT INTO ticket_messages (id, ticket_id, sender_type, sender_id, channel_id, content, is_internal) VALUES
+    ('aabbcc49-f34d-4c5b-8d54-d123f229f111', 'f6f7c49c-f34d-4c5b-8d54-d123f229f666', 'customer', 'd4e5f49c-f34d-4c5b-8d54-d123f229abcd', 'aabbcc49-f34d-4c5b-8d54-111222333444', 'I keep getting a 403 error when trying to access the dashboard. Can you help?', false),
+    ('aabbcc49-f34d-4c5b-8d54-d123f229f222', 'f6f7c49c-f34d-4c5b-8d54-d123f229f666', 'agent', 'USER_ID_1', null, 'I''ll look into this right away. Can you confirm when this started happening?', false),
+    ('aabbcc49-f34d-4c5b-8d54-d123f229f333', 'a7a8c49c-f34d-4c5b-8d54-d123f229a777', 'customer', 'e5f6a49c-f34d-4c5b-8d54-d123f229bcde', 'ccddee49-f34d-4c5b-8d54-333444555666', 'When exactly does the billing cycle start?', false);
 
 -- Insert ticket tags
 INSERT INTO ticket_tags (ticket_id, tag_id) VALUES
@@ -65,8 +102,8 @@ INSERT INTO ticket_tags (ticket_id, tag_id) VALUES
 
 -- Insert knowledge base articles
 INSERT INTO kb_articles (id, title, content, author_id, status, published_at) VALUES
-    ('c9c0c49c-f34d-4c5b-8d54-d123f229c999', 'Getting Started Guide', 'Welcome to FastDesk! Here''s how to get started...', 'a1b2c49c-f34d-4c5b-8d54-d123f229a123', 'published', now()),
-    ('d0d1c49c-f34d-4c5b-8d54-d123f229d000', 'Billing FAQ', 'Frequently asked questions about billing...', 'c3d4e49c-f34d-4c5b-8d54-d123f229a789', 'published', now());
+    ('c9c0c49c-f34d-4c5b-8d54-d123f229c999', 'Getting Started Guide', 'Welcome to FastDesk! Here''s how to get started...', 'USER_ID_1', 'published', now()),
+    ('d0d1c49c-f34d-4c5b-8d54-d123f229d000', 'Billing FAQ', 'Frequently asked questions about billing...', 'USER_ID_3', 'published', now());
 
 -- Insert ticket feedback
 INSERT INTO ticket_feedback (ticket_id, rating, comment) VALUES
