--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@supabase/supabase-js": "^2.48.0",
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-table": "^8.20.6",
