--- a/supabase/seed.sql.template
+++ b/supabase/seed.sql.template
@@ -90,7 +90,7 @@ INSERT INTO templates (id, title, content, organization_id, created_by) VALUES
     ('e5e6c49c-f34d-4c5b-8d54-d123f229e555', 'Billing FAQ', 'Here are our most common billing questions and answers...', 'e8b2c49c-f34d-4c5b-8d54-d123f229a86f', 'USER_ID_3');
 
 -- Insert tickets
-INSERT INTO tickets (id, title, customer_id, organization_id, status, priority, source, created_by_type, created_by_id) VALUES
+INSERT INTO tickets (id, title, user_id, organization_id, status, priority, source, created_by_type, created_by_id) VALUES
     -- Existing GauntletAI tickets
     ('f6f7c49c-f34d-4c5b-8d54-d123f229f666', 'Cannot access dashboard', 'USER_ID_4', 'd7a2c49c-f34d-4c5b-8d54-d123f229a86d', 'open', 'high', 'customer_portal', 'customer', 'USER_ID_4'),
     ('b8b9c49c-f34d-4c5b-8d54-d123f229b888', 'Feature suggestion', 'USER_ID_6', 'd7a2c49c-f34d-4c5b-8d54-d123f229a86d', 'pending', 'low', 'customer_portal', 'customer', 'USER_ID_6'),
