--- a/components.json
+++ b/components.json
@@ -6,8 +6,8 @@
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "src/index.css",
-    "baseColor": "zinc",
-    "cssVariables": false,
+    "baseColor": "primary",
+    "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
