--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
+    "postcss-nesting": "^13.0.1",
     "supabase": "^2.6.8",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
