--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "seed": "tsx --tsconfig supabase/seeds/tsconfig.seed.json supabase/seeds/seed.ts",
-    "seed:reset": "npx supabase db reset --linked && tsx --tsconfig supabase/seeds/tsconfig.seed.json supabase/seeds/seed.ts"
+    "seed:reset": "npx supabase db reset --linked && tsx --tsconfig supabase/seeds/tsconfig.seed.json supabase/seeds/seed.ts",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -49,16 +53,21 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^3.0.4",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "jsdom": "^26.0.0",
     "postcss": "^8.5.1",
     "postcss-nesting": "^13.0.1",
     "supabase": "^2.6.8",
@@ -67,6 +76,7 @@
     "tsx": "^4.19.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vitest": "^3.0.4"
   }
 }
