--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@langchain/anthropic": "^0.3.12",
+    "@langchain/core": "^0.3.36",
+    "@langchain/langgraph": "^0.2.41",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -39,6 +42,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "langchain": "^0.3.13",
+    "langsmith": "^0.3.3",
     "lucide-react": "^0.473.0",
     "openai": "^4.80.1",
     "react": "^18.3.1",
