--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@supabase/supabase-js": "^2.48.0",
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-table": "^8.20.6",
+    "@tiptap/extension-placeholder": "^2.11.3",
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
