--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@langchain/anthropic": "^0.3.12",
     "@langchain/core": "^0.3.36",
     "@langchain/langgraph": "^0.2.41",
+    "@langchain/openai": "^0.4.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -44,7 +45,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "langchain": "^0.3.13",
+    "langchain": "^0.3.15",
     "langsmith": "^0.3.3",
     "lucide-react": "^0.473.0",
     "openai": "^4.80.1",
