--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -43,6 +44,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "langchain": "^0.3.15",
+    "langsmith": "^0.3.4",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
