--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -27,5 +27,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["api/**/*", "vite.config.ts"]
 }
