--- a/vercel.json
+++ b/vercel.json
@@ -17,8 +17,19 @@
       "dest": "/api/$1"
     },
     {
+      "src": "^/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "^/favicon.(ico|png)",
+      "dest": "/favicon.$1"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "/index.html"
     }
   ]
 } 
