--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,17 @@
   "routes": [
     {
       "src": "/api/(.*)",
+      "headers": {
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Allow-Origin": "https://fast-desk-psi.vercel.app",
+        "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
+        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+      },
+      "dest": "/api/$1",
+      "continue": true
+    },
+    {
+      "src": "/api/(.*)",
       "dest": "/api/$1"
     },
     {
