--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "dev:local": "concurrently \"npm run dev:api\" \"npm run dev:web\"",
+    "dev": "concurrently \"npm run dev:api\" \"npm run dev:web\"",
     "dev:web": "vite",
-    "dev:api": "cross-env NODE_ENV=development tsx watch --env-file=.env.local api/server.ts",
+    "dev:api": "tsx watch api/server.ts",
     "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -62,6 +61,7 @@
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "vercel": "^40.0.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
